--- a/src/main/resources/templates/user/order/detail.html
+++ b/src/main/resources/templates/user/order/detail.html
@@ -105,7 +105,7 @@
 		              <p class="text-muted mb-0">Mã hóa đơn:
 		              	 <span style="font-weight: bold;" th:text="*{id}" readonly></span>
 		              </p>
-		              <p class="text-muted mb-0"><span class="fw-bold me-4">Discount</span> $19.00</p>
+		              <p class="text-muted mb-0" th:inline="text"><span class="fw-bold me-4">Discount</span> [[${discount.price}]]</p>
 		            </div>
 		
 		            <div class="d-flex justify-content-between pt-2">
@@ -128,6 +128,12 @@
 		              </p>
 		              <p class="text-muted mb-0"><span class="fw-bold me-4">Delivery Charges</span> Free</p>
 		            </div>
+					  <div class="d-flex justify-content-between pt-2">
+						  <p class="text-muted mb-0">Trạng thái thanh toán:
+							  <span th:if="*{paypalOrderStatus} == 'PAID'" style="font-weight: bold;" readonly="readonly">Đã thanh toán</span>
+							  <span th:unless="*{paypalOrderStatus} == 'PAID'" style="font-weight: bold;" readonly="readonly">Chưa thanh toán</span>
+						  </p>
+					  </div>
 		          </div>
 		          <div class="card-footer border-0 px-4 py-5"
 		            style="background-color: #7fad39; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
