--- a/src/main/resources/templates/user/order/detail.html
+++ b/src/main/resources/templates/user/order/detail.html
@@ -54,7 +54,7 @@
 		                    <p class="text-muted mb-0 small" style="font-weight: bold;">Tổng</span></p>
 		                  </div>
 		                </div>
-		                <div class="row" th:each="detail:*{orderDetails}" th:object="${detail}">
+		                <div class="row" id="orderDetails" th:each="detail:*{orderDetails}" th:object="${detail}">
 		                  <div class="col-md-2 mt-4" >
 		                    <img th:src="@{'/assets/img/product/' + *{product.image}}"
 		                      class="img-fluid" alt="Phone">
@@ -98,7 +98,7 @@
 		
 		            <div class="d-flex justify-content-between pt-2">
 		              <p class="fw-bold mb-0">Chi Tiết Hóa Đơn</p>
-		              <p class="text-muted mb-0"><span class="fw-bold me-4">Total</span></p>
+		              <p class="text-muted mb-0"><span class="fw-bold me-4">Total</span><span th:text="${total}"></span></p>
 		            </div>
 		
 		            <div class="d-flex justify-content-between pt-2">
