--- a/src/main/resources/templates/user/order/list.html
+++ b/src/main/resources/templates/user/order/list.html
@@ -39,6 +39,9 @@
 			                <td class="align-middle">[[${order.id}]]</td>
 			                <td class="align-middle">[[${order.createDate}]]</td>
 			                <td class="align-middle">[[${order.address}]]</td>
+			                <td class="align-middle">[[${order.discountId}]]</td>
+			                <td class="align-middle">[[${order.paypalOrderId}]]</td>
+			                <td class="align-middle">[[${order.paypalOrderStatus}]]</td>
 			                <td class="align-middle">
 			                    <a class="search" th:href="@{|/order/detail/${order.id}|}"><i class="fa fa-search"></i></a>
 			                </td>
