--- a/src/main/resources/templates/user/order/detail.html
+++ b/src/main/resources/templates/user/order/detail.html
@@ -54,7 +54,7 @@
 		                    <p class="text-muted mb-0 small" style="font-weight: bold;">Tổng</span></p>
 		                  </div>
 		                </div>
-		                <div class="row" id="orderDetails" th:each="detail:*{orderDetails}" th:object="${detail}">
+		                <div class="row" th:each="detail:*{orderDetails}" th:object="${detail}">
 		                  <div class="col-md-2 mt-4" >
 		                    <img th:src="@{'/assets/img/product/' + *{product.image}}"
 		                      class="img-fluid" alt="Phone">
@@ -98,14 +98,14 @@
 		
 		            <div class="d-flex justify-content-between pt-2">
 		              <p class="fw-bold mb-0">Chi Tiết Hóa Đơn</p>
-		              <p class="text-muted mb-0"><span class="fw-bold me-4">Total</span><span th:text="${total}"></span></p>
+		              <p class="text-muted mb-0"><span class="fw-bold me-4">Total</span></p>
 		            </div>
 		
 		            <div class="d-flex justify-content-between pt-2">
 		              <p class="text-muted mb-0">Mã hóa đơn:
 		              	 <span style="font-weight: bold;" th:text="*{id}" readonly></span>
 		              </p>
-		              <p class="text-muted mb-0" th:inline="text"><span class="fw-bold me-4">Discount</span> [[${discount.price}]]</p>
+		              <p class="text-muted mb-0"><span class="fw-bold me-4">Discount</span> $19.00</p>
 		            </div>
 		
 		            <div class="d-flex justify-content-between pt-2">
@@ -128,12 +128,6 @@
 		              </p>
 		              <p class="text-muted mb-0"><span class="fw-bold me-4">Delivery Charges</span> Free</p>
 		            </div>
-					  <div class="d-flex justify-content-between pt-2">
-						  <p class="text-muted mb-0">Trạng thái thanh toán:
-							  <span th:if="*{paypalOrderStatus} == 'PAID'" style="font-weight: bold;" readonly="readonly">Đã thanh toán</span>
-							  <span th:unless="*{paypalOrderStatus} == 'PAID'" style="font-weight: bold;" readonly="readonly">Chưa thanh toán</span>
-						  </p>
-					  </div>
 		          </div>
 		          <div class="card-footer border-0 px-4 py-5"
 		            style="background-color: #7fad39; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
