--- a/src/main/resources/templates/user/order/detail.html
+++ b/src/main/resources/templates/user/order/detail.html
@@ -98,7 +98,7 @@
 		
 		            <div class="d-flex justify-content-between pt-2">
 		              <p class="fw-bold mb-0">Chi Tiết Hóa Đơn</p>
-		              <p class="text-muted mb-0"><span class="fw-bold me-4">Total</span><span th:text="${total}"></span></p>
+		              <p class="text-muted mb-0"><span class="fw-bold me-4">Total:</span>&nbsp<span style="font-weight: bold;" th:text="${#numbers.formatDecimal(total, 0, 'POINT', 0, 'POINT')}"></span>&nbsp<span style="text-decoration: underline; font-weight: bold;">đ</span></p>
 		            </div>
 		
 		            <div class="d-flex justify-content-between pt-2">
@@ -112,21 +112,19 @@
 		              <p class="text-muted mb-0">Người nhận:
 		              	<span style="font-weight: bold;" th:text="*{account.username}" readonly="readonly"></span>
 		              </p>
-		              <p class="text-muted mb-0"><span class="fw-bold me-4">GST 18%</span> 123</p>
+		              <p class="text-muted mb-0"><span class="fw-bold me-4">Delivery Charges</span> Free</p>
 		            </div>
 					
 					<div class="d-flex justify-content-between pt-2">
 		              <p class="text-muted mb-0">Địa chỉ giao hàng:
 		              	<span style="font-weight: bold;" th:text="*{address}" readonly="readonly"></span>
 		              </p>
-		              <p class="text-muted mb-0"><span class="fw-bold me-4">GST 18%</span> 123</p>
 		            </div>
 					
-		            <div class="d-flex justify-content-between mb-4 pt-2">
+		            <div class="d-flex justify-content-between pt-2">
 		              <p class="text-muted mb-0">Ngày đặt:
 		              	<span style="font-weight: bold;" th:text="*{createDate}" readonly="readonly"></span>
 		              </p>
-		              <p class="text-muted mb-0"><span class="fw-bold me-4">Delivery Charges</span> Free</p>
 		            </div>
 					  <div class="d-flex justify-content-between pt-2">
 						  <p class="text-muted mb-0">Trạng thái thanh toán:
@@ -138,7 +136,7 @@
 		          <div class="card-footer border-0 px-4 py-5"
 		            style="background-color: #7fad39; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
 		            <h5 class="d-flex align-items-center justify-content-end text-white text-uppercase mb-0">Total
-		              paid: <span class="h2 mb-0 ms-2">$1040</span></h5>
+		              paid: &nbsp<span class="h2 mb-0 ms-2" th:text="${#numbers.formatDecimal(total, 0, 'POINT', 0, 'POINT')}"></span>&nbsp<span style="text-decoration: underline; font-weight: bold; font-size: 24px;text-transform: lowercase;">đ</span></h5>
 		          </div>
 		        </div>
 		      </div>
