--- a/src/main/resources/templates/user/order/list.html
+++ b/src/main/resources/templates/user/order/list.html
@@ -30,6 +30,9 @@
 			                <th>Mã hóa đơn</th>
 			                <th>Ngày đặt</th>
 			                <th>Địa chỉ đặt hàng</th>
+			                <th>Mã ví Paypal</th>
+			                <th>Trạng thái thanh toán Paypal</th>
+			                <th>Mã giảm giá</th>
 			                <th>Xem chi tiết</th>
 			            </tr>
 			        </thead>
@@ -38,7 +41,10 @@
 			                <td class="align-middle">[[${state.index+1}]]</td>
 			                <td class="align-middle">[[${order.id}]]</td>
 			                <td class="align-middle">[[${order.createDate}]]</td>
-			                <td class="align-middle">[[${order.address}]]</td>
+			                <td class="align-middle">[[${order.address}]]</td>      
+			                <td class="align-middle">[[${order.paypalOrderId}]]</td>
+			                <td class="align-middle">[[${order.paypalOrderStatus}]]</td>
+			                <td class="align-middle">[[${order.discountId}]]</td>
 			                <td class="align-middle">
 			                    <a class="search" th:href="@{|/order/detail/${order.id}|}"><i class="fa fa-search"></i></a>
 			                </td>
