--- a/src/main/resources/templates/user/product/detail.html
+++ b/src/main/resources/templates/user/product/detail.html
@@ -63,8 +63,27 @@
 	                            </div>
 	                        </div>
 	                        <a th:attr="ng-click=@{|cart.add2(*{id})|}" class="primary-btn" style="color: #ffffff">ADD TO CARD</a>
-
-	                        <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a>
+							
+							<th:block th:if="${#request.remoteUser}">
+		                    	<div class="d-inline-flex">
+		                    		<!-- Chưa like thì : isliked = 0 
+		                    		     0 mang giá trị false => phủ định lại sẽ là true, hiển thị tim rỗng
+		                    		-->
+		                    		<th:block th:if="!${flagLikedBtn}">
+			                    		<a th:attr="ng-click=@{|like.change(*{id})|}" class="heart-icon">
+			                    			<span class="icon_heart_alt"></span>
+			                    		</a>	                    		
+		                    		</th:block>
+		                    		<th:block th:unless="!${flagLikedBtn}">
+			                    		<a th:attr="ng-click=@{|like.change('*{id})|}" class="heart-icon">
+			                    			<span class="icon_heart_alt text-danger"></span>
+			                    		</a>	                    		
+		                    		</th:block>
+		                    	</div>
+	                    	</th:block>
+							
+							
+	                        <!-- <a href="#" class="heart-icon"><span class="icon_heart_alt"></span></a> -->
 	                        <ul>
 	                            <li><b>Availability</b> <span>In Stock</span></li>
 	                            <li><b>Shipping</b> <span>01 day shipping. <samp>Free pickup today</samp></span></li>
@@ -157,69 +176,31 @@
 	                    </div>
 	                </div>
 	            </div>
-	            <div class="row">
-	                <div class="col-lg-3 col-md-4 col-sm-6">
-	                    <div class="product__item">
-	                        <div class="product__item__pic set-bg" data-setbg="/assets/img/product/product-1.jpg">
-	                            <ul class="product__item__pic__hover">
-	                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-	                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-	                                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-	                            </ul>
-	                        </div>
-	                        <div class="product__item__text">
-	                            <h6><a href="#">Crab Pool Security</a></h6>
-	                            <h5>$30.00</h5>
-	                        </div>
-	                    </div>
-	                </div>
-	                <div class="col-lg-3 col-md-4 col-sm-6">
-	                    <div class="product__item">
-	                        <div class="product__item__pic set-bg" data-setbg="/assets/img/product/product-2.jpg">
-	                            <ul class="product__item__pic__hover">
-	                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-	                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-	                                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-	                            </ul>
-	                        </div>
-	                        <div class="product__item__text">
-	                            <h6><a href="#">Crab Pool Security</a></h6>
-	                            <h5>$30.00</h5>
-	                        </div>
-	                    </div>
-	                </div>
-	                <div class="col-lg-3 col-md-4 col-sm-6">
-	                    <div class="product__item">
-	                        <div class="product__item__pic set-bg" data-setbg="/assets/img/product/product-3.jpg">
-	                            <ul class="product__item__pic__hover">
-	                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-	                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-	                                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-	                            </ul>
-	                        </div>
-	                        <div class="product__item__text">
-	                            <h6><a href="#">Crab Pool Security</a></h6>
-	                            <h5>$30.00</h5>
-	                        </div>
-	                    </div>
-	                </div>
-	                <div class="col-lg-3 col-md-4 col-sm-6">
-	                    <div class="product__item">
-	                        <div class="product__item__pic set-bg" data-setbg="/assets/img/product/product-7.jpg">
-	                            <ul class="product__item__pic__hover">
-	                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
-	                                <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-	                                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-	                            </ul>
-	                        </div>
-	                        <div class="product__item__text">
-	                            <h6><a href="#">Crab Pool Security</a></h6>
-	                            <h5>$30.00</h5>
-	                        </div>
-	                    </div>
-	                </div>
-	            </div>
-	        </div>
+	 			<div class="row">
+                     <div class="product__discount__slider owl-carousel">
+                         <div class="col-lg-4" th:each="p : *{category.products}">
+                             <div class="product__discount__item">
+                                 <div class="product__discount__item__pic set-bg w-100"
+                                    th:data-setbg="@{|/assets/img/product/${p.image}|}">
+                                     <ul class="product__item__pic__hover">
+                                         <li><a href="#"><i class="fa fa-heart"></i></a></li>
+                                         <li><a th:href="@{|/product/detail/${p.id}|}"><i class="fa-solid fa-circle-info"></i></a></li>
+                                 		<li><a th:attr="ng-click=@{|cart.add(${p.id})|}"><i class="fa fa-shopping-cart"></i></a></li>
+                                     </ul>
+                                 </div>
+                                 <div class="product__discount__item__text">
+                                     <span th:text="${p.category.name}"></span>
+                                     <h5><a th:href="@{|/product/detail/${p.id}|}" th:text="${p.name}"></a></h5>
+                                    <div class="row" style="display: flex; justify-content: center;">
+									    <h5 th:text="${#numbers.formatDecimal(p.price, 0, 'POINT', 0, 'POINT')}"></h5>
+										&nbsp<span style="text-decoration: underline; color: #252525; font-weight: 700;">đ</span>
+									</div>
+                                 </div>
+                             </div>
+                         </div>
+                     </div>
+                 </div>  
+            </div>
 	    </section>
 	    <!-- Related Product Section End -->
 	</main>
