--- a/src/main/resources/templates/user/product/list.html
+++ b/src/main/resources/templates/user/product/list.html
@@ -252,12 +252,44 @@
 	                            </div>
 	                        </div>
 	                    </div>
-	                    <div class="product__pagination">
-	                        <a href="#">1</a>
-	                        <a href="#">2</a>
-	                        <a href="#">3</a>
-	                        <a href="#"><i class="fa fa-long-arrow-right"></i></a>
-	                    </div>
+	                    
+	                    <div class="col-12">
+				    		<ul class="pagination justify-content-center">
+								<th:block th:if="${currentPage == 1}">
+									<li class="page-item">
+					            		<a class="page-link" disabled>Previous</a>
+					        		</li>
+								</th:block>
+								<th:block th:if="${currentPage > 1}">
+					        		<!-- Prev -->
+					        		<li class="page-item">
+					            		<a class="page-link" th:href="@{/product/list(page=${currentPage - 1})}">Previous</a>
+					        		</li>	
+								</th:block>
+				
+								<th:block th:if="${maxPages == 0}">
+									<li class="page-item">
+				            			<a class="page-link">1</a>
+					        		</li>
+								</th:block>
+								<th:block th:if="${maxPages > 0}">
+					        		<li class="page-item" th:each="pageNum : ${#numbers.sequence(1, maxPages)}">
+					            		<a class="page-link" th:href="@{/product/list(page=${pageNum})}" th:classappend="${pageNum == currentPage} ? 'active'">[[${pageNum}]]</a>
+					        		</li>	
+								</th:block>
+				
+								<th:block th:if="${currentPage < maxPages}">
+					        		<li class="page-item">
+					            		<a class="page-link" th:href="@{/product/list(page=${currentPage + 1})}">Next</a>
+					        		</li>
+				        		</th:block>
+				        		<th:block th:unless="${currentPage < maxPages}">
+					        		<li class="page-item">
+					            		<a class="page-link" disabled>Next</a>
+					        		</li>
+				        		</th:block>
+				    		</ul>
+						</div>
 	                </div>
 	            </div>
 	        </div>
