update san pham moi

--- a/src/main/resources/templates/user/product/detail.html
+++ b/src/main/resources/templates/user/product/detail.html
@@ -75,7 +75,7 @@
 			                    		</a>	                    		
 		                    		</th:block>
 		                    		<th:block th:unless="!${flagLikedBtn}">
-			                    		<a th:attr="ng-click=@{|like.change('*{id})|}" class="heart-icon">
+			                    		<a th:attr="ng-click=@{|like.change('*{id})|}" class="heart-icon text-danger">
 			                    			<span class="icon_heart_alt text-danger"></span>
 			                    		</a>	                    		
 		                    		</th:block>
