--- a/src/main/resources/static/assets/admin/layout/product.html
+++ b/src/main/resources/static/assets/admin/layout/product.html
@@ -45,8 +45,8 @@
 					</div>
 					
 					<div class="form-group col-md-6">
-						<label for="title">Status</label>
-						<input ng-model="form.status" class="form-control">
+						<label for="title">Star</label>
+						<input ng-model="form.star" class="form-control">
 						<div class="errstatus" style='color: red;' ></div>
 					</div>
 
