--- a/src/main/resources/templates/user/favourite/view.html
+++ b/src/main/resources/templates/user/favourite/view.html
@@ -23,7 +23,7 @@
 	            <div class="row">
 	                <div class="col-lg-12">
 	                    <div class="section-title">
-	                        <h2>Sản Phẩm </h2>
+	                        <h2>Yêu Thích <i class="fa-solid fa-heart-pulse"></i></h2>
 	                    </div>
 	                </div>
 	            </div>
@@ -52,10 +52,10 @@
 	        </div>
 	    </section>
 	    
-	    <div class="col-12">
+	    <div class="col-12 mb-5">
     		<ul class="pagination justify-content-center">
 				<th:block th:if="${currentPage == 1}">
-					<li class="page-item">
+					<li class="page-item" style="cursor: pointer;">
 	            		<a class="page-link" disabled>Previous</a>
 	        		</li>
 				</th:block>
@@ -67,7 +67,7 @@
 				</th:block>
 
 				<th:block th:if="${maxPages == 0}">
-					<li class="page-item">
+					<li class="page-item" style="cursor: pointer;">
             			<a class="page-link">1</a>
 	        		</li>
 				</th:block>
@@ -83,7 +83,7 @@
 	        		</li>
         		</th:block>
         		<th:block th:unless="${currentPage < maxPages}">
-	        		<li class="page-item">
+	        		<li class="page-item" style="cursor: pointer;">
 	            		<a class="page-link" disabled>Next</a>
 	        		</li>
         		</th:block>
