--- a/src/main/resources/templates/user/layout/header.html
+++ b/src/main/resources/templates/user/layout/header.html
@@ -12,7 +12,7 @@
         </div>
         <div class="humberger__menu__cart">
             <ul>
-                <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
+                <li><a th:href="@{/favourite/view}"><i class="fa fa-heart"></i> <span th:text="${totalProducts}"></span></a></li>
 				<li><a th:href="@{/cart/view}" aria-current="true"> <span>{{cart.count}}</span> <i
 						class="fa-solid fa-cart-shopping"></i>
 				</a></li>
@@ -159,7 +159,7 @@
                 <div class="col-lg-3">
                     <div class="header__cart">
                         <ul>
-                            <li><a href="#"><i class="fa fa-heart"></i> <span>1</span></a></li>
+                            <li><a th:href="@{/favourite/view}"><i class="fa fa-heart"></i> <span th:text="${totalProducts}"></span></a></li>
                             <li>
 	                            <a aria-current="true" onclick="toggleMiniCart()"> <span>{{cart.count}}</span> <i class="fa-solid fa-cart-shopping"></i>
 								</a>
