--- a/src/main/resources/templates/user/home/home.html
+++ b/src/main/resources/templates/user/home/home.html
@@ -58,7 +58,10 @@
 		                        </div>
 		                    </div>
 		                </div>                 
-		            </div> 		                
+		            </div>
+		            <div class="row" style="display: flex; justify-content: center;">
+		            	<a th:href="@{/product/list}" class="btn-view-more">Xem thêm</a>
+		            </div>		                
 	            </div>
 	        </div>
 	    </section>
