--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -3852,3 +3852,34 @@ ol {
 .search:hover {
 	color: #537126;
 }
+
+.back-to-top.show {
+    bottom: 40px;
+    right: 40px;
+    opacity: 1;
+    transform: scale(1);
+    color: #fff;
+    cursor: pointer;
+}
+.back-to-top.show:hover {
+    color: #fff;
+}
+.back-to-top {
+    position: fixed;
+    bottom: -40px;
+    right: 40px;
+    display: block;
+    width: 45px;
+    height: 45px;
+    line-height: 46px;
+    background: #7fad39;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 6px;
+    opacity: 0;
+    transform: scale(0.3);
+    box-shadow: 4px 4px 10px rgb(0 0 0 / 20%);
+    z-index: 9;
+    transition: all .3s;
+}
