--- a/src/main/resources/templates/user/order/list.html
+++ b/src/main/resources/templates/user/order/list.html
@@ -33,6 +33,7 @@
 			                <th>Mã ví Paypal</th>
 			                <th>Trạng thái thanh toán Paypal</th>
 			                <th>Mã giảm giá</th>
+			                <th>Trạng thái</th>
 			                <th>Xem chi tiết</th>
 			            </tr>
 			        </thead>
@@ -45,6 +46,7 @@
 			                <td class="align-middle">[[${order.paypalOrderId}]]</td>
 			                <td class="align-middle">[[${order.paypalOrderStatus}]]</td>
 			                <td class="align-middle">[[${order.discountId}]]</td>
+			                <td class="align-middle">[[${order.status}]]</td>
 			                <td class="align-middle">
 			                    <a class="search" th:href="@{|/order/detail/${order.id}|}"><i class="fa fa-search"></i></a>
 			                </td>
