--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -20,7 +20,7 @@
 	    <!-- Link AngularJs framework -->
 	    <script src="/assets/admin/js/angular.min.js"></script>
 	    <script src="/assets/admin/js/angular-route.js"></script>
-	    
+	    <script src="https://kit.fontawesome.com/f757c7087e.js" crossorigin="anonymous"></script>
 	</head>
 	<body id="page-top" ng-app="myapp">
 		<!-- Page Wrapper -->
@@ -77,6 +77,7 @@
 	    <script src="/assets/admin/js/favourite.js"></script>
 	    <script src="/assets/admin/js/inventory-management.js"></script>
 	    <script src="/assets/admin/js/order.js"></script>
+	    <script src="/assets/admin/js/waitingForShipping.js"></script>
 	    <script src="/assets/admin/js/authority-ctrl.js"></script>
 	</body>
 </html>
