update các trạng thái order admin

--- a/src/main/resources/static/assets/admin/layout/sidebar.html
+++ b/src/main/resources/static/assets/admin/layout/sidebar.html
@@ -45,8 +45,8 @@
 				<h6 class="collapse-header">CRUD:</h6>
 				<a class="collapse-item" href="#order">Order Confirm</a>
 				<a class="collapse-item" href="#waitingForShipping">Waiting for shipping</a>
-				<a class="collapse-item" href="">Delivered</a>
-				<a class="collapse-item" href="">Cancelled</a>
+				<a class="collapse-item" href="#delivered">Delivered</a>
+				<a class="collapse-item" href="#cancelled">Cancelled</a>
 				<a class="collapse-item" href="">Order Detail</a>
 			</div>
 		</div>
