--- a/src/main/resources/static/assets/admin/layout/delivered.html
+++ b/src/main/resources/static/assets/admin/layout/delivered.html
@@ -1,4 +1,4 @@
-<div ng-controller="ctrl-order">
+<div ng-controller="ctrl-delivered">
 	<div class="row">
 		<div class="col-md-12">
 			<div class="card card-primary shadow">
@@ -45,19 +45,12 @@
 						<td>{{item.discountId}}</td>
 						<td>{{item.paypalOrderId}}</td>
 						<td>{{item.paypalOrderStatus}}</td>
-						<td><span class="status-confirm">{{item.status}}</span></td>
+						<td><span class="status-success">{{item.status}}</span></td>
 						<td>
-							<button ng-click="update(item.id)" class="btn btn-sm btn-icon btn-pure btn-default on-default edit-row"
-								title="Duyệt">
-								<i class="fa-sharp fa-solid fa-circle-check"></i>
-							</button> 
 							<a class="btn btn-sm btn-icon btn-pure btn-default on-default edit-row"
 								title="Xem chi tiết"> 
 								<i class="fa-sharp fa-solid fa-circle-info"></i>
-							</a> 
-							<button ng-click="cancel(item.id)" class="btn btn-sm btn-icon btn-pure btn-default on-default remove-row" title="Hủy">
-								<i class="fa-sharp fa-solid fa-circle-xmark"></i>
-							</button>
+							</a> 					
 						</td>
 					</tr>
 				</tbody>
