--- a/src/main/resources/templates/user/order/list.html
+++ b/src/main/resources/templates/user/order/list.html
@@ -46,7 +46,16 @@
 			                <td class="align-middle">[[${order.paypalOrderId}]]</td>
 			                <td class="align-middle">[[${order.paypalOrderStatus}]]</td>
 			                <td class="align-middle">[[${order.discountId}]]</td>
-			                <td class="align-middle">[[${order.status}]]</td>
+			                <td class="align-middle">
+				                <!-- Use Thymeleaf's conditional expression to set the appropriate CSS class -->
+				                <span th:class="${order.status == 'Đợi xác nhận' ? 'status-confirm'
+				                                    : order.status == 'Đang giao' ? 'status-waiting'
+				                                    : order.status == 'Đã giao' ? 'status-success'
+				                                    : order.status == 'Đã hủy' ? 'status-cancel'
+				                                    :''}">
+				                    [[${order.status}]]
+				                </span>
+				            </td>
 			                <td class="align-middle">
 			                    <a class="search" th:href="@{|/order/detail/${order.id}|}"><i class="fa fa-search"></i></a>
 			                </td>
