--- a/src/main/resources/templates/user/product/detail.html
+++ b/src/main/resources/templates/user/product/detail.html
@@ -65,7 +65,7 @@
 	                        <a th:attr="ng-click=@{|cart.add2(*{id})|}" class="primary-btn" style="color: #ffffff">ADD TO CARD</a>
 							
 							<th:block th:if="${#request.remoteUser}">
-		                    	<div class="d-inline-flex">
+		                    	<div class="d-inline-flex" style="cursor: pointer;">
 		                    		<!-- Chưa like thì : isliked = 0 
 		                    		     0 mang giá trị false => phủ định lại sẽ là true, hiển thị tim rỗng
 		                    		-->
