forgotpass va mã hoá pass sussces

--- a/src/main/resources/templates/user/security/login_register.html
+++ b/src/main/resources/templates/user/security/login_register.html
@@ -44,7 +44,7 @@
                         <label for="defaultCheck1">Remember me</label>
                     </div>
                     <div class="pass-link">
-                        <a href="#">Forgot password</a>
+                        <a th:href="@{/account/forgot-pass}">Forgot password</a>
                     </div>
                 </div>
                 <button type="submit" id="login-button">Login</button>
