--- a/src/main/resources/static/assets/admin/layout/order.html
+++ b/src/main/resources/static/assets/admin/layout/order.html
@@ -51,7 +51,7 @@
 								title="Duyệt">
 								<i class="fa-sharp fa-solid fa-circle-check"></i>
 							</button> 
-							<a class="btn btn-sm btn-icon btn-pure btn-default on-default edit-row"
+							<a ng-click="load_orderDetail(item.id)" href="#scrollspyHeading1" class="btn btn-sm btn-icon btn-pure btn-default on-default edit-row"
 								title="Xem chi tiết"> 
 								<i class="fa-sharp fa-solid fa-circle-info"></i>
 							</a> 
@@ -79,4 +79,58 @@
 			</div>	
 		</div>
 	</div>
+	
+	<br id="scrollspyHeading1" data-bs-spy="scroll">
+	<div class="mt-30px bg-light pt-1" ng-show="order != null">
+        <div class="mb-3 mt-20px pl-35px">
+            <h3>Chi Tiết Đơn Hàng Số {{order.id}}</h3>
+        </div>
+        <div class="row pl-35px">
+            <div class="contact_left p-0 col-5" style="min-height: 535px;">
+                <div class="pl-2">
+                    <div class="mt-0">
+                        <ul>
+                            <li><code>Mã đơn: </code><span class="fw-semibold" style="color: #eb1c24; font-size: 22px;">{{order.id}}</span></li>
+                            <li><code>Trạng Thái: </code><span style="color: #eb1c24">{{order.status}}</span></li>
+                            <li><code>Mã Khách Hàng: </code><span style="color: #eb1c24">{{order.account.username}}</span></li>
+                            <!-- <li><code>Mã Người Duyệt: </code>${thongTin.staffID}</span>
+                                </li> -->
+                            <li><code>Thời Gian: </code><span style="color: #eb1c24"><code>Ngày </code>{{order.createDate | date: 'dd/MM/yyyy'}} <code> lúc </code> {{order.createDate | date: 'hh:mm:ss'}}</li>
+                                <li>
+                                    <hr>
+                                </li>
+                                <li><code>Tên Khách Hàng: </code><span>{{order.account.fullname}}</span></li>
+                            <li><code>Email: </code><span>{{order.account.email}}</span></li>
+                            <li><code>Giao Đến: </code><span>{{order.address}}</span></li>
+                            <li><code>Giá: </code><span style="color: #eb1c24">{{totalPrice | number}} VND</span></li> 
+                            <li>
+                                <button class="btn-danger text-light p-3 mt-20px" title="Hủy Đơn Hàng" style="border-radius: 6px;">Hủy Đơn Hàng </button>
+                                <button class="btn-info text-light p-3 mt-20px" title="Xác Nhận Đơn Hàng" style="border-radius: 6px;">Xác Nhận Đơn Hàng </button>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-7 pr-35px" style="min-height: 535px;">
+                <aside>
+                    <div class="table_page table-responsive">
+                        <table>
+                            <tbody>
+                                <tr ng-repeat="ord in list_orderDetail">
+                                    <td><img src="assets/img/product/{{ord.product.image}}" alt="{{ord.product.name}}" width="107" height="107" style="border:0; object-fit: contain;"></td>
+                                    <td>{{ord.product.name}}</td>
+                                    <td>
+                                        <code>Số Lượng: </code><span class="text-success">{{ord.quantity}}
+                                        </td>
+                                        <td><code>Tổng Tiền: </code><span>
+                                            {{ord.price * ord.quantity | number}} Vnd
+                                        </span></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </aside>
+            </div>
+        </div>
+    </div>
 </div>
