--- a/src/main/resources/templates/user/home/home.html
+++ b/src/main/resources/templates/user/home/home.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{/user/index :: dynamic(~{::main})}">
+	<!-- CSS -->
+<link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 <body>
 	<main>
 		<!-- Categories Section Begin -->
@@ -327,4 +329,6 @@
     <!-- Blog Section End -->
 	</main>	
 </body>
+<!-- JavaScript -->
+<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 </html>
