--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -16,6 +16,7 @@
 	    
 	    <!-- Custom styles for this template-->
 	    <link href="/assets/admin/css/sb-admin-2.min.css" rel="stylesheet">
+	    <link href="/assets/admin/css/dashboard.css" rel="stylesheet">
 	    
 	    <!-- Link AngularJs framework -->
 	    <script src="/assets/admin/js/angular.min.js"></script>
@@ -112,5 +113,6 @@
 	    <script src="/assets/admin/js/delivered.js"></script>
 	    <script src="/assets/admin/js/cancelled.js"></script>
 	    <script src="/assets/admin/js/authority-ctrl.js"></script>
+	    <script src="/assets/admin/js/dashboard.js"></script>
 	</body>
 </html>
