admin dashboard be

--- a/src/main/resources/static/assets/admin/layout/dashboard.html
+++ b/src/main/resources/static/assets/admin/layout/dashboard.html
@@ -12,7 +12,8 @@
 	<title>AdminHub</title>
 </head>
 <body>
-
+	<div  ng-controller="ctrl-order">
+	
 		<!-- MAIN -->
 		<main>
 			<div class="head-title">
@@ -45,7 +46,7 @@
 				<li>
 					<i class='bx bxs-group' ></i>
 					<span class="text">
-						<h3>2834</h3>
+						 <h3 id="visitorCount">0</h3>
 						<p>Visitors</p>
 					</span>
 				</li>
@@ -75,46 +76,31 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr>
+							<tr ng-repeat="item in getCurrentItems()" >
 								<td>
 									<img src="/assets/admin/img/people.png">
-									<p>John Doe</p>
+									<p>{{item.account.username}}</p>
 								</td>
-								<td>01-10-2021</td>
-								<td><span class="status completed">Completed</span></td>
+								<td>{{item.createDate}}</td>
+								<td><span class="status completed">{{item.status}}</span></td>
 							</tr>
-							<tr>
+							<tr ng-repeat="item in getCurrentItems()">
 								<td>
 									<img src="/assets/admin/img/people.png">
-									<p>John Doe</p>
+									<p>{{item.account.username}}</p>
 								</td>
-								<td>01-10-2021</td>
-								<td><span class="status pending">Pending</span></td>
+								<td>{{item.createDate}}</td>
+								<td><span class="status pending">{{item.status}}</span></td>
 							</tr>
-							<tr>
+							<tr ng-repeat="item in getCurrentItems()">
 								<td>
 									<img src="/assets/admin/img/people.png">
-									<p>John Doe</p>
+									<p>{{item.account.username}}</p>
 								</td>
-								<td>01-10-2021</td>
-								<td><span class="status process">Process</span></td>
+								<td>{{item.createDate}}</td>
+								<td><span class="status process">{{item.status}}</span></td>
 							</tr>
-							<tr>
-								<td>
-									<img src="/assets/admin/img/people.png">
-									<p>John Doe</p>
-								</td>
-								<td>01-10-2021</td>
-								<td><span class="status pending">Pending</span></td>
-							</tr>
-							<tr>
-								<td>
-									<img src="/assets/admin/img/people.png">
-									<p>John Doe</p>
-								</td>
-								<td>01-10-2021</td>
-								<td><span class="status completed">Completed</span></td>
-							</tr>
+
 						</tbody>
 					</table>
 				</div>
@@ -149,11 +135,11 @@
 				</div>
 			</div>
 		</main>
+		</div>
 		<!-- MAIN -->
 	</section>
 	<!-- CONTENT -->
 	
 
-	<script src="dashboard.js"></script>
 </body>
 </html>
