--- a/src/main/resources/static/assets/admin/css/dashboard.css
+++ b/src/main/resources/static/assets/admin/css/dashboard.css
@@ -57,7 +57,7 @@ body {
 	left: 0;
 	width: 280px;
 	height: 100%;
-	background: #ffffff;
+	background: var(--light);
 	z-index: 2000;
 	font-family: var(--lato);
 	transition: .3s ease;
@@ -80,7 +80,7 @@ body {
 	position: sticky;
 	top: 0;
 	left: 0;
-	background: #ffffff;
+	background: var(--light);
 	z-index: 500;
 	padding-bottom: 20px;
 	box-sizing: content-box;
@@ -130,7 +130,7 @@ body {
 #sidebar .side-menu li a {
 	width: 100%;
 	height: 100%;
-	background: #ffffff;
+	background: var(--light);
 	display: flex;
 	align-items: center;
 	border-radius: 48px;
@@ -181,7 +181,7 @@ CONTENT
 NAVBAR
 #content nav {
 	height: 56px;
-	background: #ffffff;
+	background: var(--light);
 	padding: 0 24px;
 	display: flex;
 	align-items: center;
@@ -200,7 +200,7 @@ NAVBAR
 	bottom: -40px;
 	left: 0;
 	border-radius: 50%;
-	box-shadow: -20px -20px 0 #ffffff;
+	box-shadow: -20px -20px 0 var(--light);
 }
 #content nav a {
 	color: var(--dark);
@@ -244,7 +244,7 @@ NAVBAR
 	justify-content: center;
 	align-items: center;
 	background: var(--blue);
-	color: #ffffff;
+	color: var(--light);
 	font-size: 18px;
 	border: none;
 	outline: none;
@@ -262,9 +262,9 @@ NAVBAR
 	width: 20px;
 	height: 20px;
 	border-radius: 50%;
-	border: 2px solid #ffffff;
+	border: 2px solid var(--light);
 	background: var(--red);
-	color: #ffffff;
+	color: var(--light);
 	font-weight: 700;
 	font-size: 12px;
 	display: flex;
@@ -348,7 +348,7 @@ NAVBAR */ */
 	padding: 0 16px;
 	border-radius: 36px;
 	background: var(--blue);
-	color: #ffffff;
+	color: var(--light);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -367,7 +367,7 @@ NAVBAR */ */
 }
 #content main .box-info li {
 	padding: 24px;
-	background: #ffffff;
+	background: var(--light);
 	border-radius: 20px;
 	display: flex;
 	align-items: center;
@@ -417,7 +417,7 @@ NAVBAR */ */
 }
 #content main .table-data > div {
 	border-radius: 20px;
-	background: #ffffff;
+	background: var(--light);
 	padding: 24px;
 	overflow-x: auto;
 }
@@ -471,7 +471,7 @@ NAVBAR */ */
 #content main .table-data .order table tr td .status {
 	font-size: 10px;
 	padding: 6px 16px;
-	color: #ffffff;
+	color: var(--light);
 	border-radius: 20px;
 	font-weight: 700;
 }
@@ -567,7 +567,7 @@ NAVBAR */ */
 		width: 36px;
 		height: 100%;
 		border-radius: 0 36px 36px 0;
-		color: #ffffff;
+		color: var(--light);
 		background: var(--red);
 	}
 
