--- a/src/main/resources/static/assets/admin/layout/sidebar.html
+++ b/src/main/resources/static/assets/admin/layout/sidebar.html
@@ -12,7 +12,7 @@
 	
 	<!-- Nav Item - Dashboard -->
 	<li class="nav-item active">
-		<a class="nav-link" href="#dashboard">
+		<a class="nav-link" href="/admin/index">
 			<i class="fas fa-fw fa-tachometer-alt"></i>
 			<span>Dashboard</span>
 		</a>
