--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -16,7 +16,7 @@
 	    
 	    <!-- Custom styles for this template-->
 	    <link href="/assets/admin/css/sb-admin-2.min.css" rel="stylesheet">
-	    
+	    <link rel="stylesheet" href="/assets/admin/css/dashboard.css">
 	    <!-- Link AngularJs framework -->
 	    <script src="/assets/admin/js/angular.min.js"></script>
 	    <script src="/assets/admin/js/angular-route.js"></script>
@@ -102,6 +102,7 @@
 	    <!-- Custom scripts for all pages-->
 	    <script src="/assets/admin/js/sb-admin-2.min.js"></script>
 	    
+	    
 	    <script src="/assets/admin/js/webapp.js"></script>
 	    <script src="/assets/admin/js/category.js"></script>
 	    <script src="/assets/admin/js/product.js"></script>
@@ -111,6 +112,7 @@
 	    <script src="/assets/admin/js/waitingForShipping.js"></script>
 	    <script src="/assets/admin/js/delivered.js"></script>
 	    <script src="/assets/admin/js/cancelled.js"></script>
+	    <script src="/assets/admin/js/dashboard.js"></script>
 	    <script src="/assets/admin/js/authority-ctrl.js"></script>
 	</body>
 </html>
