--- a/src/main/resources/static/assets/admin/layout/dashboard.html
+++ b/src/main/resources/static/assets/admin/layout/dashboard.html
@@ -12,7 +12,7 @@
 	<title>AdminHub</title>
 </head>
 <body>
-	<div  ng-controller="ctrl-order">
+	<div  ng-controller="ctrl-dashboard">
 	
 		<!-- MAIN -->
 		<main>
@@ -39,21 +39,21 @@
 				<li>
 					<i class='bx bxs-calendar-check' ></i>
 					<span class="text">
-						<h3>1020</h3>
+						<h3 id="totalOrder">Loading...</h3>
 						<p>New Order</p>
 					</span>
 				</li>
 				<li>
 					<i class='bx bxs-group' ></i>
 					<span class="text">
-						 <h3 id="visitorCount">0</h3>
+						 <h3 id="viewVistor">Loading...</h3>
 						<p>Visitors</p>
 					</span>
 				</li>
 				<li>
 					<i class='bx bxs-dollar-circle' ></i>
 					<span class="text">
-						<h3>$2543</h3>
+						<h3 id="totalPriceOrder">Loading...</h3>
 						<p>Total Sales</p>
 					</span>
 				</li>
@@ -76,31 +76,23 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr ng-repeat="item in getCurrentItems()" >
+							<tr ng-repeat="item in items" >
 								<td>
 									<img src="/assets/admin/img/people.png">
 									<p>{{item.account.username}}</p>
 								</td>
 								<td>{{item.createDate}}</td>
-								<td><span class="status completed">{{item.status}}</span></td>
-							</tr>
-							<tr ng-repeat="item in getCurrentItems()">
 								<td>
-									<img src="/assets/admin/img/people.png">
-									<p>{{item.account.username}}</p>
+								<span class="{{item.status == 'Đợi xác nhận' ? 'status-confirm'
+				                                    : item.status == 'Đang giao' ? 'status-waiting'
+				                                    : item.status == 'Đã giao' ? 'status-success'
+				                                    : item.status == 'Đã hủy' ? 'status-cancel'
+				                                    :''}}">
+				                    {{item.status}}
+				                </span>
+		
 								</td>
-								<td>{{item.createDate}}</td>
-								<td><span class="status pending">{{item.status}}</span></td>
 							</tr>
-							<tr ng-repeat="item in getCurrentItems()">
-								<td>
-									<img src="/assets/admin/img/people.png">
-									<p>{{item.account.username}}</p>
-								</td>
-								<td>{{item.createDate}}</td>
-								<td><span class="status process">{{item.status}}</span></td>
-							</tr>
-
 						</tbody>
 					</table>
 				</div>
