--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -44,10 +44,14 @@
     <div>
     	<div th:insert="/user/layout/footer.html"></div>
     </div>
-    <a class="back-to-top show" id="backto-top">
+	<div>
+		    <a class="back-to-top show" id="backto-top">
       <i class="fa-solid fa-arrow-up"></i>
     </a>
-	
+	 <a style="top:470px;" class="back-to-top show" id="backto-top">
+      <i class="fa-solid fa-cart-shopping"></i>
+    </a>
+	</div>
 	<!-- Footer Section Begin -->
 	
 	
