--- a/src/main/resources/templates/user/security/forgot-pass.html
+++ b/src/main/resources/templates/user/security/forgot-pass.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
+<link rel="stylesheet" href="/assets/css/forgotpass.css">
 <body>
 	<main>
 		<!-- Contact Start -->
@@ -20,6 +20,7 @@
 	                            <button class="btn btn-primary py-2 px-4" type="submit">Send</button>
 	                        </div>
 	                    </form>
+	                    <div id="success"></div>
 	                </div>
 	            </div>
 	
