--- a/src/main/resources/templates/user/favourite/view.html
+++ b/src/main/resources/templates/user/favourite/view.html
@@ -23,7 +23,7 @@
 	            <div class="row">
 	                <div class="col-lg-12">
 	                    <div class="section-title">
-	                        <h2>Yêu Thích <i class="fa-solid fa-heart-pulse"></i></h2>
+	                        <h2>Yêu Thích <i style="color: #7fad39" class="fa-solid fa-heart"></i></h2>
 	                    </div>
 	                </div>
 	            </div>
