discount admin, gửi mail tk mới

--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -68,7 +68,8 @@
 	<script src="/assets/js/miniCart.js"></script>
 	<script src="/assets/js/viewmore.js"></script>
 	<script src="/assets/admin/js/visitors-service.js"></script>
-	
+	<script src="/assets/js/contact.js"></script>
+	<script src="/assets/js/jqBootstrapValidation.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
   </script>
