--- a/src/main/resources/templates/user/security/forgot-pass.html
+++ b/src/main/resources/templates/user/security/forgot-pass.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <link rel="stylesheet" href="/assets/css/forgotpass.css">
+<script src="/assets/js/contact.js"></script>
+	<script src="/assets/js/jqBootstrapValidation.min.js"></script>
+
 <body>
 	<main>
 		<!-- Contact Start -->
