--- a/src/main/resources/static/assets/admin/layout/sidebar.html
+++ b/src/main/resources/static/assets/admin/layout/sidebar.html
@@ -31,6 +31,7 @@
 				<h6 class="collapse-header">CRUD:</h6>
 				<a class="collapse-item" href="#category">Caterogy</a>
 				<a class="collapse-item" href="#product">Product</a>
+				<a class="collapse-item" href="#discount">Discount</a>
 			</div>
 		</div>
 	</li>
