update tìm kiếm

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -11,6 +11,7 @@
 	    
 	    <!-- Custom fonts for this template-->
 	    <link href="/assets/admin/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+	    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	    
 	    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 	    
@@ -114,6 +115,7 @@
 	    <script src="/assets/admin/js/authority-ctrl.js"></script>
 	    <script src="/assets/admin/js/dashboard.js"></script>
 	    <script src="/assets/admin/js/discount.js"></script>
+	    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 	    
 	    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
 		    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
