--- a/src/main/resources/templates/user/layout/header.html
+++ b/src/main/resources/templates/user/layout/header.html
@@ -231,12 +231,12 @@
                 <div class="col-lg-9">
                     <div class="hero__search">
                         <div class="hero__search__form">
-                            <form action="#">
+                            <form th:action="@{/product/list/search}" method="get">
                                 <div class="hero__search__categories">
                                     All Categories
                                     <span class="arrow_carrot-down"></span>
                                 </div>
-                                <input type="text" placeholder="Bạn cần tìm gì ?">
+                                <input  name="keyword" type="text" placeholder="Bạn cần tìm gì ?">
                                 <button type="submit" class="site-btn">SEARCH</button>
                             </form>
                         </div>
