update viewMore dashboard

--- a/src/main/resources/static/assets/admin/css/dashboard.css
+++ b/src/main/resources/static/assets/admin/css/dashboard.css
@@ -47,7 +47,17 @@ body {
 }
 
 
-
+.viewMore {
+	margin: 0 auto;
+	background-color: #1cc88a;
+	color: #ffffff;
+	font-size: 18px;
+}
+.viewMore:hover {
+	background-color: #1cc88a;
+	color: #ffffff;
+	font-size: 18px;
+}
 
 
 /* /* SIDEBAR
