--- a/src/main/resources/static/assets/admin/layout/dashboard.html
+++ b/src/main/resources/static/assets/admin/layout/dashboard.html
@@ -84,7 +84,7 @@
 								</tr>
 							</thead>
 							<tbody>
-								<tr ng-repeat="item in items">
+								<tr ng-repeat="item in items  | limitTo: visibleRows">
 									<td><img src="/assets/admin/img/people.png">
 										<p>{{item.account.username}}</p></td>
 									<td>{{item.createDate}}</td>
@@ -98,6 +98,9 @@
 								</tr>
 							</tbody>
 						</table>
+						 <div class="row mt-3">
+						 	<button ng-click="showMoreRows()" class="btn viewMore">Xem thêm</button>
+						 </div>
 					</div>
 
 
