--- a/src/main/resources/static/assets/admin/css/dashboard.css
+++ b/src/main/resources/static/assets/admin/css/dashboard.css
@@ -54,7 +54,7 @@ body {
 	font-size: 18px;
 }
 .viewMore:hover {
-	background-color: #1cc88a;
+	background-color: #16a372;
 	color: #ffffff;
 	font-size: 18px;
 }
