--- a/src/main/resources/templates/user/security/login_register.html
+++ b/src/main/resources/templates/user/security/login_register.html
@@ -19,6 +19,7 @@
                 <input type="text" placeholder="Username" ng-model="form.username" id="username" name="username">
                 <input type="text" placeholder="Fullname" ng-model="form.fullname" id="fullname" name="fullname">
                 <input type="text" placeholder="Email" ng-model="form.email" id="userEmail" name="userEmail" >
+                <input type="text" placeholder="Phone" ng-model="form.phone" id="phone" name="phone" >
                 <input type="password" placeholder="Password" ng-model="form.password" id="password" name="password">
                 <button ng-click="create()">Register</button>
                 <span>or use your account</span>
