--- a/src/main/resources/templates/user/layout/header.html
+++ b/src/main/resources/templates/user/layout/header.html
@@ -45,6 +45,7 @@
 								</th:block>
 								<th:block th:if="${#request.remoteUser}">
 									<li><a th:href="@{/order/list}">Giỏ Hàng Của Tôi</a></li>
+									<li><a th:href="@{/profile}">Thông Tin Đăng Nhập</a></li>
 									<li
 										th:if="${#request.isUserInRole('DIRE') or #request.isUserInRole('STAF')}">
 										<a href="#">Trang Quản Trị</a>
@@ -124,6 +125,7 @@
 						                    	</th:block>	
 						                    	<th:block th:if="${#request.remoteUser}">			
 							                        <li><a th:href="@{/order/list}">Giỏ Hàng Của Tôi</a></li>
+							                        <li><a th:href="@{/profile}">Thông Tin Đăng Nhập</a></li>
 							                        <li th:if="${#request.isUserInRole('DIRE') or #request.isUserInRole('STAF')}">
 							                        	<a th:href="@{/admin/index}">Trang Quản Trị</a>
 							                        </li>
