--- a/src/main/resources/templates/user/layout/header.html
+++ b/src/main/resources/templates/user/layout/header.html
@@ -32,8 +32,7 @@
             <div class="header__top__right__auth">
 				<nav class="header__menu2">
 					<ul>
-						<li><a href="#"> <span th:if="${#request.remoteUser}">Xin
-									Chào, [[${#request.remoteUser}]]</span> <span
+						<li><a href="#"> <span id="username" th:if="${#request.remoteUser}">[[${#request.remoteUser}]]</span> <span
 								th:unless="${#request.remoteUser}">&nbsp &nbsp &nbsp &nbsp
 									&nbsp &nbsp<i class="fa fa-user"></i>Tài Khoản
 							</span>
@@ -45,7 +44,7 @@
 								</th:block>
 								<th:block th:if="${#request.remoteUser}">
 									<li><a th:href="@{/order/list}">Giỏ Hàng Của Tôi</a></li>
-									<li><a th:href="@{/profile}">Thông Tin Đăng Nhập</a></li>
+									<li><a data-bs-toggle="modal" data-bs-target="#exampleModal" style="cursor: pointer;">Thông Tin Đăng Nhập</a></li>
 									<li
 										th:if="${#request.isUserInRole('DIRE') or #request.isUserInRole('STAF')}">
 										<a href="#">Trang Quản Trị</a>
@@ -115,7 +114,7 @@
                             	<nav class="header__menu2">
                             		<ul>
                             			<li><a href="#">
-			                            		 <span th:if="${#request.remoteUser}">Xin Chào, [[${#request.remoteUser}]]</span>
+			                            		 <span id="username" th:if="${#request.remoteUser}">[[${#request.remoteUser}]]</span>
 			                            		 <span th:unless="${#request.remoteUser}">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<i class="fa fa-user"></i>Tài Khoản</span>
 			                            	</a>
 						                    <ul class="header__menu__dropdown2">
@@ -125,7 +124,7 @@
 						                    	</th:block>	
 						                    	<th:block th:if="${#request.remoteUser}">			
 							                        <li><a th:href="@{/order/list}">Giỏ Hàng Của Tôi</a></li>
-							                        <li><a th:href="@{/profile}">Thông Tin Đăng Nhập</a></li>
+							                        <li><a data-bs-toggle="modal" data-bs-target="#exampleModal" style="cursor: pointer;">Thông Tin Đăng Nhập</a></li>
 							                        <li th:if="${#request.isUserInRole('DIRE') or #request.isUserInRole('STAF')}">
 							                        	<a th:href="@{/admin/index}">Trang Quản Trị</a>
 							                        </li>
@@ -264,4 +263,22 @@
         </div>
     </section>
     <!-- Hero Section End -->
+    
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	  <div class="modal-dialog" style="max-width: 850px;">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <h5 class="modal-title" id="exampleModalLabel">Thông Tin Tài Khoản</h5>
+	        <span data-bs-dismiss="modal" aria-label="Close" style="cursor: pointer;"><i class="fas fa-times"></i></span>
+	      </div>
+	      <div class="modal-body">
+	        <div th:insert="/user/profile.html"></div>
+	      </div>
+	      <!-- <div class="modal-footer">
+	        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+	        <button type="button" class="btn btn-primary">Save changes</button>
+	      </div> -->
+	    </div>
+	  </div>
+	</div>
 </div>
